syntax = "proto3";

message CreateDocRequest {
    string id = 1;
    string name = 2;
    string desc = 3;
}
message DocDescription {
    string id = 1;
    string name = 2;
    string desc = 3;
    string path = 4;
}
message Doc {
    DocDescription desc = 1;
    string content = 2;
}
